--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Dice Game</title>
-</head>
-<body>
-    <h1>The Dice Game</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The Dice Game</title>
+
+        <!-- Style Sheet -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/styles.css">
+
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Exo:ital@1&family=Piedra&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <h1>The Dice Game</h1>
+
+        <div class="row gameTable">
+            <div class="col-6 firstPlayer">
+                <h2>Player One</h2>
+                <img src="images/dice6.png" alt="dicePicture">
+            </div>
+            <div class="col-6 secondPlayer">
+                <h2>Player Two</h2>
+                <img src="images/dice6.png" alt="dicePicture">
+            </div>
+          </div>
+
+          <button class="btn btn-info" onclick="buttonRefresh">Click to Refresh</button>
+        </div>  
+    </body>
 </html>
