Update README and Fix Button Refresh

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </div>
           </div>
 
-          <button class="btn btn-info" onclick="buttonRefresh">Click to Refresh</button>
+          <button class="btn btn-info" onclick="buttonRefresh();">Click to Refresh</button>
         </div>  
+
+        <script src="js/scripts.js"></script>
     </body>
-</html>
+</html> 
