--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/styles.css">
 
         <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Exo:ital@1&family=Piedra&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&family=Oxanium:wght@500&family=Piedra&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>The Dice Game</h1>
@@ -33,4 +33,14 @@
         </div>
         <script src="js/scripts.js"></script>
     </body>
+    <footer>
+        <div class="footerDiv">
+            <a class="footer-link" href="https://github.com/Mathz78">GitHub</a>
+            <a class="footer-link" href="https://twitter.com/Mathz78">Twitter</a>
+            <a class="footer-link" href="https://www.linkedin.com/in/matheus-rocha-8b733a185/">LinkedIn</a>
+            <p class="footer-name">© 2020 Matheus Rocha</p>
+            <a id="contact-me"></a>
+            <p class="God">God be praised.</p>
+        </div>
+    </footer>
 </html> 
