Update on footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="footer-link" href="https://github.com/Mathz78">GitHub</a>
             <a class="footer-link" href="https://twitter.com/Mathz78">Twitter</a>
             <a class="footer-link" href="https://www.linkedin.com/in/matheus-rocha-8b733a185/">LinkedIn</a>
-            <p class="footer-name">© 2020 Matheus Rocha</p>
+            <p class="footer-name">© 2020 - Matheus Rocha</p>
             <a id="contact-me"></a>
             <p class="God">God be praised.</p>
         </div>
