--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id="table">
-            <h1>The Dice Game</h1>
+            <h1>The Dice Game 😊</h1>
             <h2 id="tie">Tie!!</h2>
             <div class="row gameTable">
                 <div class="col-6 firstPlayer">
